SERVER-52564 Deadlock between step down and MongoDOperationContextSession